# archived-LPLG

./: .gitignore  404.html  CNAME  LICENSE  README.md  example_data.json  example_matchid.csv  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
config/: config.py
data_exemple/: Player_Item.csv  Player_Other_Detail.csv
docs/: example_data.json  exemple_matchid.csv  index.md  parse.md
docs/data_exemple/: Player_Batlle_Detail.csv  Player_Damege_Detail.csv  Player_Damege_Taken_Detail.csv  Player_Info.csv  Player_Player_Perks.csv  Player_Player_Perks_Runes.csv  Player_Trinket.csv  Player_Vision_Detail.csv  Team_Info.csv
module/: parse.py
parse/: index.html
schemas/: schemas.py
src/: LPLG.py
src/LPLGather/: parse.py
src/LPLGather/_config/: _config.py
src/LPLGather/_func/: _func.py  _utils.py
src/LPLGather/func/: func.py
src/config/: config.py
