[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LPLG"
version = "0.0.5"
authors = [
  { name="Mateus Paulo", email="maatanalista@gmail.com" },
]
description = "Gather date for LPL players"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars>=0.19.1",
    "msgspec>=0.3.1",
    "requests>=2.25.1"
]

[project.urls]
"Homepage" = "https://github.com/matpauloDS/LPLG"
"Bug Tracker" = "https://github.com/matpauloDS/LPLG/issues"

