[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LPLG"
version = "0.0.16"
authors = [
  { name="Mateus Paulo", email="maatanalista@gmail.com" },
]
description = "Gather date for LPL players"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "polars>=0.19.0",
    "msgspec>=0.18.4",
    "requests>=2.5.4.1",
    "python-dotenv>=0.10.2",
    "ruff>=0.1.5",
    "numpy>=1.26.2",
    "aiosonic>=0.17.0"
]

[project.urls]
"Homepage" = "https://github.com/matpauloDS/LPLG"
"Bug Tracker" = "https://github.com/matpauloDS/LPLG/issues"

